--- a/about/index.html
+++ b/about/index.html
@@ -146,6 +146,8 @@
 <img alt="Python" src="../misc/python.png" />
 </div>
 
+			<p>Edit (2017): Ce blog est maintenant hébergé sur <a href="https://github.com/jlaumon/old-blogbd/">github</a></p>
+			
 <p>Ce blog a été entièrement développé en <a href="http://www.python.org/">Python</a>, grâce au framework web <a href="http://www.djangoproject.com/">Django</a> (et est toujours en développement).</p>
 
 <p>Django permet de développer un site web dynamique beaucoup plus rapidement qu'avec simplement du Php par exemple. Il y a beaucoup moins de lignes de code, le code est plus propre et plus facile à modifier. En deux mots : c'est Bien ! (le 'c' c'est pas un mot ! :@)</p>
